kasten/kasten-immutable-location-profile/.kyverno-test/immutable-location-profile.yaml
kind: Profile
apiVersion: config.kio.kasten.io/v1alpha1
metadata:
  name: sample-location-profile
spec:
  locationSpec:
    type: ObjectStore
    objectStore:
      name: k10demo-immutable
      objectStoreType: S3
      path: k10/xxxxxxxxxxxxxxxxxxxxxx/migration
      pathType: Directory
      protectionPeriod: 72h0m0s
      region: us-east-1
    credential:
      secretType: AwsAccessKey
      secret:
        apiVersion: v1
        kind: secret
        name: k10secret-abcde
        namespace: kasten-io
  type: Location
---
kind: Profile
apiVersion: config.kio.kasten.io/v1alpha1
metadata:
  name: sample-location-profile-invalid
spec:
  locationSpec:
    type: ObjectStore
    objectStore:
      name: k10demo-immutable
      objectStoreType: S3
      path: k10/xxxxxxxxxxxxxxxxxxxxxx/migration
      pathType: Directory
      region: us-east-1
    credential:
      secretType: AwsAccessKey
      secret:
        apiVersion: v1
        kind: secret
        name: k10secret-abcde
        namespace: kasten-io
  type: Location
